# duet

./: .gitattributes  .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  Makefile  NEXT_STEPS.md  NEXT_TASKS.md  README.md  TODO.md  pyproject.toml  thesis.txt
.duet-smoke/: config.json
.duet-smoke/journal/main/: segment-000000.turnlog
.duet-smoke/meta/: branches.json  entities.json
.duet-smoke/meta/main/: journal.index
config/: duet.example.yaml
docs/: LANGUAGE_DESIGN.md  adapter_guide.md  deprecation_plan.md  development_plan.md  facet_architecture_plan.md  integration_plan.md  migration_guide.md  orchestration_overview.md  session_review.md  smoke_testing.md  sprint_7_streaming_ux.md  sprint_8_tui_plan.md  sprint_planning.md  syndicate_final_status.md  syndicate_implementation_status.md  typed_facts_implementation_status.md  workflow_dsl.md  workflows.md
docs/design/: spawn_entities.md
docs/implementation_guides/: dsl1_object_references.md  dsl1_object_references_steps.md
examples/: README.md  custom_channels_workflow.py
examples/workflows/: two_agents.duet
formalization/: DuetFormalization.lean  lake-manifest.json  lakefile.lean
formalization/DuetFormalization/: Runtime.lean  SMC.lean
paper/: acmart-tagged.cls  acmart.cls  lafi_call.html  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  orcid_profile.html  references.bib
python/duet/: README.md  pyproject.toml
python/duet/src/duet/: __init__.py  __main__.py  cli.py
python/duet/src/duet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/duet/src/duet/protocol/: __init__.py  client.py
python/duet/tests/: __init__.py  test_cli_helpers.py
src/: lib.rs
src/codebase/: mod.rs  transcript.rs
src/codebase/agent/: claude.rs  codex.rs  harness.rs  mod.rs
src/codebase/workspace/: mod.rs
src/duet/: __init__.py  approval.py  artifacts.py  channels.py  cli.py  config.py  dataspace.py  executor.py  facet_runner.py  git_operations.py  init.py  logging.py  migrate.py  models.py  orchestrator.py  persistence.py  prompt_builder.py  scheduler.py  streaming.py  workflow_loader.py
src/duet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/duet/adapters/: __init__.py  base.py  claude_code.py  codex.py  echo.py
src/duet/dsl/: __init__.py  combinators.py  compiler.py  facet.py  registry.py  steps.py  tools.py  workflow.py
src/duet/templates/: __init__.py  workflow.py.template
src/interpreter/: ast.rs  builder.rs  control.rs  entity.rs  ir.rs  mod.rs  parser.rs  protocol.rs  runtime.rs  value.rs
src/runtime/: actor.rs  branch.rs  control.rs  error.rs  journal.rs  mod.rs  pattern.rs  reaction.rs  registry.rs  scheduler.rs  schema.rs  service.rs  service_client.rs  snapshot.rs  state.rs  storage.rs  turn.rs
src/runtime/workflow/: mod.rs
src/service/: mod.rs
src/util/: io_value.rs  mod.rs
tests/: __init__.py  capability_errors.rs  entity_hydration.rs  interpreter_runtime.rs  io_value_structured.rs  manual_test.py  reactions.rs  service_client.rs  service_protocol.rs  smoke_tests.py  test_acceptance.py  test_adapter_integration.py  test_adapters.py  test_approval_conversation.py  test_cli.py  test_cli_acceptance.py  test_cli_cancel.py  test_combinators.py  test_config_integration.py  test_config_integration.py.rej  test_custom_workflows.py  test_dataspace.py  test_dotted_references.py  test_dsl.py  test_executor.py  test_facet_builder.py  test_facet_runner.py  test_facet_runner_dataspaces.py  test_facet_steps.py  test_fluent_api.py  test_init.py  test_orchestrator_cancel.py  test_orchestrator_facets.py  test_persistence.py  test_policy.py  test_scheduler.py  test_scheduler_facets.py  test_soak.py  test_streaming.py  test_turn_batching.py  (+4 more)
tests/fixtures/: content_workflow.py  triage_workflow.py
