[package]
name = "duet"
version = "0.1.0"
edition = "2021"
authors = ["Duet Contributors"]
description = "A causally consistent, time-travelable Syndicated Actor runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/syndicate-lang/duet"

[dependencies]
# Preserves data format (core dependency)
preserves = "4.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hashing and cryptography
blake3 = "1.5"

# Concurrency primitives
parking_lot = "0.12"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUIDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# CLI (for bin)
clap = { version = "4.5", features = ["derive"], optional = true }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.13"
proptest = "1.5"

[features]
default = []
cli = ["clap"]

[[bin]]
name = "duet-cli"
path = "src/bin/duet-cli.rs"
required-features = ["cli"]

[lib]
name = "duet"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
