[package]
name = "duet"
version = "0.1.0"
edition = "2024"
authors = ["Duet Contributors"]
description = "A causally consistent, time-travelable Syndicated Actor runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/syndicate-lang/duet"

[dependencies]
# Preserves data format (core dependency)
preserves = { version = "5.0.0-rc.7", features = ["serde"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Hashing and cryptography
blake3 = "1.5"

# Concurrency primitives
parking_lot = "0.12"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUIDs
uuid = { version = "1.18", features = ["v4", "serde"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Lazy static initialization
once_cell = "1.20"

# Filesystem walks
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
proptest = "1.6"

[lib]
name = "duet"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
