[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duet"
version = "0.1.0"
description = "Command-line interface for the Duet runtime"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "typer>=0.9.0",
    "rich-click>=1.8.3"
]

[project.scripts]
duet = "duet.cli:main_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
